# LENS_app

./: .gitignore  LICENSE  README.md  _fix_dev.js  _old_shaders.js  capture-direction-test.cjs  capture-kube.cjs  capture-test.cjs  capture-test2.cjs  check-shortcut.ps1  fetch-kube.cjs  fetch-kube2.cjs  kube-main-content.html  kube-maps-dataurls.json  liquid-glass-react-1.1.1.tgz  package-lock.json  package.json  test-basic.html  test-glass-playground.html  test-glass-v3.html  test-glass-v4.html  test-glass-v5.html  test-glass-v6.html  test-glass-v7.html  test-glass-v8.html  test-glass-v9.html  test-lg-ekino.html  test-lg-kube-exact.html  test-lg-kube.html  test-liquid-glass-panel-v2.html  tmp_polar.txt  tmp_polar_url.txt  tmp_prominent.txt  tmp_prominent_url.txt  tmp_standard.txt  tmp_standard_url.txt  update-shortcut.ps1  vite.config.js
electron/: exif.js  lg-react-standalone.html  main.js  preload.js  protocol.js  test-launcher.mjs  test-lg.js  test-refract.html  thumbnail.js
electron-dist/: LENS Beta Setup 1.7.1.exe.blockmap  builder-debug.yml  latest.yml
legacy/python-desktop/: main.py  scanner.py  styles.py
legacy/web-portfolio/: index.html  photos.js  scan_photos.py
legacy/web-portfolio-v2/: index.html
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: base.css  dev-panel.css  gallery.css  glass-components.css  hero.css  lightbox.css  loading.css  modern-features.css  panels.css  reset.css  sidebar.css  titlebar.css  (+3 more)
(+38 files in other folders)
