[package]
name = "photography-tauri"
version = "1.7.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["rayon"] }
turbojpeg = { version = "1", features = ["image"] }
num_cpus = "1"
kamadak-exif = "0.6"
